--- a/src/MediaPost.css
+++ b/src/MediaPost.css
@@ -215,9 +215,11 @@
     border-radius: 12px;
     padding: 0.5rem;
 
-    width: 80rem;
+    width: 68rem;
     height: 3rem;
-    max-height: 5rem;
+    /* max-height: 5rem; */
+
+    margin-bottom: 1rem;
 
     display: grid;
     grid-template-columns: 4% 46% 10% 10% 10% 10% 10%;
@@ -341,7 +343,6 @@ ol {
     padding-left: 4rem;
   }
   ol li {
-    margin-bottom: 1rem;
     counter-increment: my-awesome-counter;
     position: relative;
   }
